Fix T96292: unable to set active material output using Python

Differential Revision: https://developer.blender.org/D14301